<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Classroom Chat</string>

    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="not_connected">Connect to a device to send a message</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting…</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>
    <string name="your_message">Your message</string>


    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices…</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_frequently_contacted_devices">Frequently contacted people</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="settings">Settings</string>

    <!-- Settings -->

    <string name="message1">message 1</string>
    <string name="message2">message 2</string>
    <string name="message3">message 3</string>
    <string name="message4">message 4</string>

    <!-- menu 1 -->
    <string name="settings_configure_messages_menu1">Configure your custom chat messages for menu 1</string>
    <string name="message1_1">message11</string>
    <string name="message2_1">message21</string>
    <string name="message3_1">message31</string>
    <string name="message4_1">message41</string>
    <string name="settings_description_message_1">Choose the message to send when rotation the phone to the front</string>
    <string name="settings_description_message_2">Choose the message to send when rotation the phone to the left</string>
    <string name="settings_description_message_3">Choose the message to send when rotation the phone to the right</string>
    <string name="settings_description_message_4">Choose the message to send when rotation the phone to the down</string>

    <!-- menu 2 -->
    <string name="settings_configure_messages_menu2">Configure your custom chat messages for menu 2</string>
    <string name="message1_2">message12</string>
    <string name="message2_2">message22</string>
    <string name="message3_2">message32</string>
    <string name="message4_2">message42</string>
    <!-- menu 3 -->
    <string name="settings_configure_messages_menu3">Configure your custom chat messages for menu 3</string>
    <string name="message1_3">message13</string>
    <string name="message2_3">message23</string>
    <string name="message3_3">message33</string>
    <string name="message4_3">message43</string>

    <!-- App intro -->
    <string name="intro_first_title">Rotate to send</string>
    <string name="intro_first_description">Rotate your phone to one of the 4 directions to send a message</string>
    <string name="intro_second_title">You could turn off your screen</string>
    <string name="intro_second_description">Send your message even if your screen is turned off</string>
    <string name="intro_third_title">Customize your chatMessages</string>
    <string name="intro_third_description">Set your custom chatMessages in the App settings</string>
    <string name="intro_fourth_title">Choose your nearby friend</string>
    <string name="intro_fourth_description">Choose your nearby friend and communicate with him using Bluetooth</string>
    <string name="your_name">Your name</string>
    <string name="shake_detected">Shake detected , next menu is shown</string>

    <!-- stats -->
    <string name="total_messages_sent">Total messages sent</string>
    <string name="total_messages_received">Total messages received</string>
    <string name="messages_sent">Messages sent</string>
    <string name="messages_received">Messages received</string>
    <string name="stats">Stats</string>

</resources>
