<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/secure_connect_scan"
        android:icon="@drawable/ic_people_24dp"
        android:title="@string/secure_connect"
        app:showAsAction="always" />


    <item
        android:id="@+id/discoverable"
        android:title="@string/discoverable"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/stats"
        android:icon="@drawable/ic_trending_up_24dp"
        android:title="@string/settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/settings"
        app:showAsAction="always" />


</menu>
