<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <TextView
            android:id="@+id/title_frequently_contacted_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#666"
            android:gravity="center_horizontal"
            android:text="@string/title_frequently_contacted_devices"
            android:textColor="#fff" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/frequently_contacted_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:stackFromBottom="true" />


        <TextView
        android:id="@+id/title_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#666"
        android:gravity="center_horizontal"
        android:text="@string/title_paired_devices"
            android:textColor="#fff" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stackFromBottom="true" />

    <TextView
        android:id="@+id/title_new_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#666"
        android:gravity="center_horizontal"
        android:paddingLeft="5dp"
        android:text="@string/title_other_devices"
        android:textColor="#fff"
        android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
        android:id="@+id/new_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:stackFromBottom="true" />

    <Button
        android:id="@+id/button_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_scan" />
</LinearLayout>

</ScrollView>
